# bsDoctor

./: .gitignore  1.ipynb  1.json  README.md  a.pickle  bsDoctor copy.py  bsDoctor.docx  bsDoctor.py  data.pickle  fig-scatter-plotly.html  hello.py  histogram_features.ipynb  plot.html  plotly-test.html  profile.cProfile  profile.ipynb  pyproject.toml  quasar-test.html  readme.md  test-0224.ipynb  test-0227.ipynb  test.ipynb  time.profile  ~$Doctor.docx  ~WRL2029.tmp
bsDoctor-report/: data.pickle  report-ENCFF873NOV.html  sample-1.html  sample-2.html
examples/: example.bam.bai  genome.fna.gz.gzi
output2/: data.pickle  report-example.html
output3/: data.pickle  report-example.html
output4/: data.pickle  report-example.html
report/: CpG-motif.html  CpG-strandness.html  RRBS-motif.html  base.html  content copy.html  content.html  conversion.html  coverage-bias.html  error.html  foot.html  footer.html  general_stats.html  head.html  header.html  includes.html  lambda.html  main.html  main.jinja-html  me-bias.html  me-level.html  mt.html  nav.html  out.html  pangene.html  plastid.html  quality.html  report-1.html  report-ENCFF873NOV.html  report-bootstrap.jinja-html  saturation.html  summary.html  toolbox.html
rrbs-human/: data.pickle  report-SRR19264609.html
rrbs-human-SRR21640124/: data.pickle
rrbs-human-dup/: data.pickle  report-SRR21640124.html
rrbs-human-dup-30p/: data.pickle  report-SRR21640124.html
rrbs-human2/: data.pickle  report-SRR19264609.html
src/: CpG_motif.py  CpG_strandness.py  RRBS.py  bin_chr_wise.py  config.py  coverage.py  depth_bias.py  (+11 more)
(+29 files in other folders)
